@@ -5,12 +5,18 @@ bind9-ldap 1.1.1 TO BE ANNOUNCED
 	  - Call malloc() and free() before we assign a value to the
 	    bind{name,pw} variables. I've notice a memory thrashing,
 	    maybe this will help...
+	  - Fix zone2ldap.c:main() to work with later Bind9.
 
 	Additions/Misc changes
 	  - Include zone2ldap command
 	  - Include zone2ldif command
 	  - Include ldap2zone command
-	  - Try connecting five times (with five seconds sleep()
+	  - Try connecting three times (with five seconds sleep()
 	    between each attempt) to the LDAP server before failing.
 	  - More verbose error if failing to connect/bind to the
 	    LDAP server (using the ldap_perror() function).
+	  - First param to contrib/sdb/ldap/ldapdb.c:ldapdb_bind() is
+	    now the zone name. Used only in debug output (makes it
+	    easier to figure out which zone that it wasn't possible
+	    to bind for).
+	  - Add some debugging to easier see connects/binds etc.
